new update in home page

--- a/index.html
+++ b/index.html
@@ -134,6 +134,38 @@
             background: #DB2777;
         }
 
+        .upcoming-card-4 {
+            background: linear-gradient(135deg, #3B82F6 0%, #60A5FA 100%);
+        }
+
+        .upcoming-card-4::before {
+            background: #2563EB;
+        }
+
+        .upcoming-card-5 {
+            background: linear-gradient(135deg, #10B981 0%, #34D399 100%);
+        }
+
+        .upcoming-card-5::before {
+            background: #059669;
+        }
+
+        .upcoming-card-6 {
+            background: linear-gradient(135deg, #F59E0B 0%, #FBBF24 100%);
+        }
+
+        .upcoming-card-6::before {
+            background: #D97706;
+        }
+
+        .upcoming-card-7 {
+            background: linear-gradient(135deg, #6366F1 0%, #818CF8 100%);
+        }
+
+        .upcoming-card-7::before {
+            background: #4F46E5;
+        }
+
         .past-card {
             background: linear-gradient(135deg, #64748B 0%, #94A3B8 100%);
         }
@@ -388,7 +420,7 @@
             color: #374151;
             /* font-family: poppins; */
             /* font-family: 'Courier New', monospace; */
-            font-family: "ui-monospace","SFMono-Regular","Menlo","Monaco","Consolas","Liberation Mono","Courier New","monospace" ;
+            font-family: "ui-monospace", "SFMono-Regular", "Menlo", "Monaco", "Consolas", "Liberation Mono", "Courier New", "monospace";
             letter-spacing: 2px;
             /* margin-bottom: 12px; */
         }
@@ -439,8 +471,6 @@
                 font-size: 1.6rem;
             }
         }
-
-       
     </style>
 </head>
 
@@ -480,7 +510,7 @@
                                 <span class="live-badge rounded-full">LIVE</span>
                                 <span class="card-text-secondary card-date">30 June 2025 9.00AM</span>
                             </div>
-                            <h3 class="card-text card-lottery-name">Tuesday Choice Weekly Lottery (CL 18th Draw)</h3>
+                            <h3 class="card-text card-lottery-name">Tuesday Choice Weekly Lottery (TUC 18th Draw)</h3>
                             <div class="flex items-center card-text-secondary">
                                 <i class="fas fa-trophy text-yellow-300 mr-2"></i>
                                 <span class="card-prize">1st Prize: ₹1 Lakh</span>
@@ -561,184 +591,7 @@
                     </div>
                 </div>
 
-                <!-- Choice Weekly Lottery 2 -->
-                <div class="lottery-card maharashtra-card cursor-pointer" onclick="toggleResult('result2')">
-                    <div class="flex items-center justify-between">
-                        <div class="flex-1 card-element-spacing">
-                            <div class="flex items-center space-x-3">
-                                <span class="result-badge rounded-full">RESULT</span>
-                                <span class="card-text-secondary card-date">28 June 2025</span>
-                            </div>
-                            <h3 class="card-text card-lottery-name">Wednesday Choice Weekly Lottery<br>(WEC 18th Draw)
-                            </h3>
-                            <div class="flex items-center card-text-secondary">
-                                <i class="fas fa-trophy text-yellow-300 mr-2"></i>
-                                <span class="card-prize">1st Prize: ₹50 Lakh</span>
-                            </div>
 
-                            <!-- Countdown Timer -->
-                            <div class="countdown-container">
-                                <div class="flex items-center justify-between">
-                                    <span class="countdown-label">Next draw:</span>
-                                    <div class="flex space-x-2 items-center">
-                                        <div class="countdown-badge" id="result-countdown2-hours">07</div>
-                                        <span class="card-text font-bold">:</span>
-                                        <div class="countdown-badge" id="result-countdown2-minutes">00</div>
-                                        <span class="card-text font-bold">:</span>
-                                        <div class="countdown-badge" id="result-countdown2-seconds">00</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="text-right ml-4">
-                            <i id="arrow2"
-                                class="fas fa-chevron-down card-text text-xl transition-transform duration-300"></i>
-                        </div>
-                    </div>
-
-                    <div id="result2" class="card-expand collapsed mt-6">
-                        <div class="result-container space-y-4">
-                            <!-- 1st Prize -->
-                            <div class="result-card">
-                                <div class="result-card-header">1st Prize</div>
-                                <div class="result-card-content">
-                                    <div class="result-prize-amount">₹1,00,000/-</div>
-                                    <div class="result-winning-number">MH 40352</div>
-
-                                </div>
-                            </div>
-
-                            <!-- 2nd Prize -->
-                            <div class="result-card">
-                                <div class="result-card-header">2nd Prize</div>
-                                <div class="result-card-content">
-                                    <div class="result-prize-amount">₹10,000/-</div>
-                                    <div class="result-winning-number">2712</div>
-
-                                </div>
-                            </div>
-
-                            <!-- 3rd Prize -->
-                            <div class="result-card">
-                                <div class="result-card-header">3rd Prize</div>
-                                <div class="result-card-content">
-                                    <div class="result-prize-amount">₹5,000/-</div>
-                                    <div class="result-winning-number">901</div>
-
-                                </div>
-                            </div>
-
-                            <!-- 4th Prize -->
-                            <div class="result-card">
-                                <div class="result-card-header">4th Prize</div>
-                                <div class="result-card-content">
-                                    <div class="result-prize-amount">₹1,000/-</div>
-                                    <div class="result-winning-number">032</div>
-
-                                </div>
-                            </div>
-
-                            <!-- 5th Prize -->
-                            <div class="result-card">
-                                <div class="result-card-header">5th Prize</div>
-                                <div class="result-card-content">
-                                    <div class="result-prize-amount">₹100/-</div>
-                                    <div class="result-winning-number">001</div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Choice Weekly Lottery 3 -->
-                <div class="lottery-card punjab-card cursor-pointer" onclick="toggleResult('result3')">
-                    <div class="flex items-center justify-between">
-                        <div class="flex-1 card-element-spacing">
-                            <div class="flex items-center space-x-3">
-                                <span class="result-badge rounded-full">RESULT</span>
-                                <span class="card-text-secondary card-date">28 June 2025</span>
-                            </div>
-                            <h3 class="card-text card-lottery-name">Wednesday Choice Weekly Lottery<br>(WEC 18th Draw)</h3>
-                            <div class="flex items-center card-text-secondary">
-                                <i class="fas fa-trophy text-yellow-300 mr-2"></i>
-                                <span class="card-prize">1st Prize: ₹25 Lakh</span>
-                            </div>
-
-                            <!-- Countdown Timer -->
-                            <div class="countdown-container">
-                                <div class="flex items-center justify-between">
-                                    <span class="countdown-label">Next draw:</span>
-                                    <div class="flex space-x-2 items-center">
-                                        <div class="countdown-badge" id="result-countdown3-hours">24</div>
-                                        <span class="card-text font-bold">:</span>
-                                        <div class="countdown-badge" id="result-countdown3-minutes">00</div>
-                                        <span class="card-text font-bold">:</span>
-                                        <div class="countdown-badge" id="result-countdown3-seconds">00</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="text-right ml-4">
-                            <i id="arrow3"
-                                class="fas fa-chevron-down card-text text-xl transition-transform duration-300"></i>
-                        </div>
-                    </div>
-
-                    <div id="result3" class="card-expand collapsed mt-6">
-                        <div class="result-container space-y-4">
-                            <!-- 1st Prize -->
-                            <div class="result-card">
-                                <div class="result-card-header">1st Prize</div>
-                                <div class="result-card-content">
-                                    <div class="result-prize-amount">₹1,00,000/-</div>
-                                    <div class="result-winning-number">MH 40352</div>
-
-                                </div>
-                            </div>
-
-                            <!-- 2nd Prize -->
-                            <div class="result-card">
-                                <div class="result-card-header">2nd Prize</div>
-                                <div class="result-card-content">
-                                    <div class="result-prize-amount">₹10,000/-</div>
-                                    <div class="result-winning-number">2712</div>
-
-                                </div>
-                            </div>
-
-                            <!-- 3rd Prize -->
-                            <div class="result-card">
-                                <div class="result-card-header">3rd Prize</div>
-                                <div class="result-card-content">
-                                    <div class="result-prize-amount">₹5,000/-</div>
-                                    <div class="result-winning-number">901</div>
-
-                                </div>
-                            </div>
-
-                            <!-- 4th Prize -->
-                            <div class="result-card">
-                                <div class="result-card-header">4th Prize</div>
-                                <div class="result-card-content">
-                                    <div class="result-prize-amount">₹1,000/-</div>
-                                    <div class="result-winning-number">032</div>
-
-                                </div>
-                            </div>
-
-                            <!-- 5th Prize -->
-                            <div class="result-card">
-                                <div class="result-card-header">5th Prize</div>
-                                <div class="result-card-content">
-                                    <div class="result-prize-amount">₹100/-</div>
-                                    <div class="result-winning-number">001</div>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </section>
 
@@ -1025,7 +878,7 @@
                 </div>
 
                 <!-- Upcoming Lottery 3 -->
-                <div class="lottery-card upcoming-card-3 cursor-pointer" onclick="toggleResult('upcoming3')">
+                <div class="lottery-card upcoming-card-4 cursor-pointer" onclick="toggleResult('upcoming4')">
                     <div class="flex items-center justify-between">
                         <div class="flex-1 card-element-spacing">
                             <div class="flex items-center space-x-3">
@@ -1059,7 +912,7 @@
                         </div>
                     </div>
 
-                    <div id="upcoming3" class="card-expand collapsed mt-6">
+                    <div id="upcoming4" class="card-expand collapsed mt-6">
                         <div class="result-container space-y-4">
                             <!-- 1st Prize -->
                             <div class="result-card">
@@ -1113,9 +966,9 @@
                         </div>
                     </div>
                 </div>
-                
+
                 <!-- Upcoming Lottery 3 -->
-                <div class="lottery-card upcoming-card-3 cursor-pointer" onclick="toggleResult('upcoming3')">
+                <div class="lottery-card upcoming-card-5 cursor-pointer" onclick="toggleResult('upcoming5')">
                     <div class="flex items-center justify-between">
                         <div class="flex-1 card-element-spacing">
                             <div class="flex items-center space-x-3">
@@ -1149,7 +1002,7 @@
                         </div>
                     </div>
 
-                    <div id="upcoming3" class="card-expand collapsed mt-6">
+                    <div id="upcoming5" class="card-expand collapsed mt-6">
                         <div class="result-container space-y-4">
                             <!-- 1st Prize -->
                             <div class="result-card">
@@ -1205,7 +1058,7 @@
                 </div>
 
                 <!-- Upcoming Lottery 3 -->
-                <div class="lottery-card upcoming-card-3 cursor-pointer" onclick="toggleResult('upcoming3')">
+                <div class="lottery-card upcoming-card-6 cursor-pointer" onclick="toggleResult('upcoming6')">
                     <div class="flex items-center justify-between">
                         <div class="flex-1 card-element-spacing">
                             <div class="flex items-center space-x-3">
@@ -1239,7 +1092,7 @@
                         </div>
                     </div>
 
-                    <div id="upcoming3" class="card-expand collapsed mt-6">
+                    <div id="upcoming6" class="card-expand collapsed mt-6">
                         <div class="result-container space-y-4">
                             <!-- 1st Prize -->
                             <div class="result-card">
