new update in home page

--- a/index.html
+++ b/index.html
@@ -1187,10 +1187,10 @@
                                 <span class="past-badge rounded-full">PAST</span>
                                 <span class="card-text-secondary card-date">27 June 2025</span>
                             </div>
-                            <h3 class="card-text card-lottery-name">Choice Weekly Lottery<br>(CL 14th Draw)</h3>
+                            <h3 class="card-text card-lottery-name">Monday Choice Weekly Lottery<br>(MOC 18th Draw)</h3>
                             <div class="flex items-center card-text-secondary">
                                 <i class="fas fa-trophy text-yellow-300 mr-2"></i>
-                                <span class="card-prize">Winner: MH 40352 - ₹40 Lakh</span>
+                                <span class="card-prize">Winner: MH40352 - ₹40 Lakh</span>
                             </div>
                         </div>
                         <div class="text-right ml-4">
@@ -1262,7 +1262,7 @@
                                 <span class="past-badge rounded-full">PAST</span>
                                 <span class="card-text-secondary card-date">26 June 2025</span>
                             </div>
-                            <h3 class="card-text card-lottery-name">Choice Weekly Lottery<br>(CL 13th Draw)</h3>
+                            <h3 class="card-text card-lottery-name">Sunday Choice Weekly Lottery<br>(SUC 18th Draw)</h3>
                             <div class="flex items-center card-text-secondary">
                                 <i class="fas fa-trophy text-yellow-300 mr-2"></i>
                                 <span class="card-prize">Winner: MH 40352 - ₹15 Lakh</span>
