new update in home page

--- a/index.html
+++ b/index.html
@@ -189,6 +189,34 @@
         .past-card2::before {
              background: #059669;
         } 
+         .past-card3 {
+            background: linear-gradient(135deg, #6366F1 0%, #818CF8 100%);
+        }
+
+        .past-card3::before {
+             background: #4F46E5;
+        } 
+
+         .past-card4 {
+             background: linear-gradient(135deg, #EC4899 0%, #F472B6 100%);
+        }
+
+        .past-card4::before {
+              background: #DB2777;
+        } 
+        .past-card5 {
+             background: linear-gradient(135deg, #A855F7 0%, #C084FC 100%);
+        }
+        .past-card5::before {
+             background: #9333EA;
+        } 
+
+         .past-card6 {
+              background: linear-gradient(135deg, #FFC93C 0%, #FFD666 100%);
+        }
+        .past-card6::before {
+             background: #FFB020;
+        } 
 
         .countdown-badge {
             background: linear-gradient(45deg, #667eea, #764ba2);
@@ -1328,6 +1356,307 @@
                         </div>
                     </div>
                 </div>
+                
+                 <!-- Past Result 2 -->
+                <div class="lottery-card past-card3 cursor-pointer" onclick="toggleResult('past3')">
+                    <div class="flex items-center justify-between">
+                        <div class="flex-1 card-element-spacing">
+                            <div class="flex items-center space-x-3">
+                                <span class="past-badge rounded-full">PAST</span>
+                                <span class="card-text-secondary card-date">28 June 2025</span>
+                            </div>
+                            <h3 class="card-text card-lottery-name">Saturday Choice Weekly Lottery<br>(SAC 18th Draw)</h3>
+                            <div class="flex items-center card-text-secondary">
+                                <i class="fas fa-trophy text-yellow-300 mr-2"></i>
+                                <span class="card-prize">Winner: MH 40352 - ₹15 Lakh</span>
+                            </div>
+                        </div>
+                        <div class="text-right ml-4">
+                            <i id="arrow-past2"
+                                class="fas fa-chevron-down card-text text-xl transition-transform duration-300"></i>
+                        </div>
+                    </div>
+
+                    <div id="past3" class="card-expand collapsed mt-6">
+                        <div class="result-container space-y-4">
+                            <!-- 1st Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">1st Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹1,00,000/-</div>
+                                    <div class="result-winning-number">MH 40352</div>
+
+                                </div>
+                            </div>
+
+                            <!-- 2nd Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">2nd Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹10,000/-</div>
+                                    <div class="result-winning-number">2712</div>
+
+                                </div>
+                            </div>
+
+                            <!-- 3rd Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">3rd Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹5,000/-</div>
+                                    <div class="result-winning-number">901</div>
+
+                                </div>
+                            </div>
+
+                            <!-- 4th Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">4th Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹1,000/-</div>
+                                    <div class="result-winning-number">032</div>
+
+                                </div>
+                            </div>
+
+                            <!-- 5th Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">5th Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹100/-</div>
+                                    <div class="result-winning-number">001</div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                 <!-- Past Result 2 -->
+                <div class="lottery-card past-card4 cursor-pointer" onclick="toggleResult('past4')">
+                    <div class="flex items-center justify-between">
+                        <div class="flex-1 card-element-spacing">
+                            <div class="flex items-center space-x-3">
+                                <span class="past-badge rounded-full">PAST</span>
+                                <span class="card-text-secondary card-date">27 June 2025</span>
+                            </div>
+                            <h3 class="card-text card-lottery-name">Friday Choice Weekly Lottery<br>(FRI 18th Draw)</h3>
+                            <div class="flex items-center card-text-secondary">
+                                <i class="fas fa-trophy text-yellow-300 mr-2"></i>
+                                <span class="card-prize">Winner: MH 40352 - ₹15 Lakh</span>
+                            </div>
+                        </div>
+                        <div class="text-right ml-4">
+                            <i id="arrow-past2"
+                                class="fas fa-chevron-down card-text text-xl transition-transform duration-300"></i>
+                        </div>
+                    </div>
+
+                    <div id="past4" class="card-expand collapsed mt-6">
+                        <div class="result-container space-y-4">
+                            <!-- 1st Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">1st Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹1,00,000/-</div>
+                                    <div class="result-winning-number">MH 40352</div>
+
+                                </div>
+                            </div>
+
+                            <!-- 2nd Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">2nd Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹10,000/-</div>
+                                    <div class="result-winning-number">2712</div>
+
+                                </div>
+                            </div>
+
+                            <!-- 3rd Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">3rd Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹5,000/-</div>
+                                    <div class="result-winning-number">901</div>
+
+                                </div>
+                            </div>
+
+                            <!-- 4th Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">4th Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹1,000/-</div>
+                                    <div class="result-winning-number">032</div>
+
+                                </div>
+                            </div>
+
+                            <!-- 5th Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">5th Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹100/-</div>
+                                    <div class="result-winning-number">001</div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                 <!-- Past Result 2 -->
+                <div class="lottery-card past-card5 cursor-pointer" onclick="toggleResult('past5')">
+                    <div class="flex items-center justify-between">
+                        <div class="flex-1 card-element-spacing">
+                            <div class="flex items-center space-x-3">
+                                <span class="past-badge rounded-full">PAST</span>
+                                <span class="card-text-secondary card-date">26 June 2025</span>
+                            </div>
+                            <h3 class="card-text card-lottery-name">Thursday Choice Weekly Lottery<br>(THC 18th Draw)</h3>
+                            <div class="flex items-center card-text-secondary">
+                                <i class="fas fa-trophy text-yellow-300 mr-2"></i>
+                                <span class="card-prize">Winner: MH 40352 - ₹15 Lakh</span>
+                            </div>
+                        </div>
+                        <div class="text-right ml-4">
+                            <i id="arrow-past2"
+                                class="fas fa-chevron-down card-text text-xl transition-transform duration-300"></i>
+                        </div>
+                    </div>
+
+                    <div id="past5" class="card-expand collapsed mt-6">
+                        <div class="result-container space-y-4">
+                            <!-- 1st Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">1st Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹1,00,000/-</div>
+                                    <div class="result-winning-number">MH 40352</div>
+
+                                </div>
+                            </div>
+
+                            <!-- 2nd Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">2nd Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹10,000/-</div>
+                                    <div class="result-winning-number">2712</div>
+
+                                </div>
+                            </div>
+
+                            <!-- 3rd Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">3rd Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹5,000/-</div>
+                                    <div class="result-winning-number">901</div>
+
+                                </div>
+                            </div>
+
+                            <!-- 4th Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">4th Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹1,000/-</div>
+                                    <div class="result-winning-number">032</div>
+
+                                </div>
+                            </div>
+
+                            <!-- 5th Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">5th Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹100/-</div>
+                                    <div class="result-winning-number">001</div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                 <!-- Past Result 2 -->
+                <div class="lottery-card past-card6 cursor-pointer" onclick="toggleResult('past6')">
+                    <div class="flex items-center justify-between">
+                        <div class="flex-1 card-element-spacing">
+                            <div class="flex items-center space-x-3">
+                                <span class="past-badge rounded-full">PAST</span>
+                                <span class="card-text-secondary card-date">25 June 2025</span>
+                            </div>
+                            <h3 class="card-text card-lottery-name">Wednesday Choice Weekly Lottery<br>(WEC 18th Draw)</h3>
+                            <div class="flex items-center card-text-secondary">
+                                <i class="fas fa-trophy text-yellow-300 mr-2"></i>
+                                <span class="card-prize">Winner: MH 40352 - ₹15 Lakh</span>
+                            </div>
+                        </div>
+                        <div class="text-right ml-4">
+                            <i id="arrow-past2"
+                                class="fas fa-chevron-down card-text text-xl transition-transform duration-300"></i>
+                        </div>
+                    </div>
+
+                    <div id="past6" class="card-expand collapsed mt-6">
+                        <div class="result-container space-y-4">
+                            <!-- 1st Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">1st Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹1,00,000/-</div>
+                                    <div class="result-winning-number">MH 40352</div>
+
+                                </div>
+                            </div>
+
+                            <!-- 2nd Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">2nd Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹10,000/-</div>
+                                    <div class="result-winning-number">2712</div>
+
+                                </div>
+                            </div>
+
+                            <!-- 3rd Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">3rd Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹5,000/-</div>
+                                    <div class="result-winning-number">901</div>
+
+                                </div>
+                            </div>
+
+                            <!-- 4th Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">4th Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹1,000/-</div>
+                                    <div class="result-winning-number">032</div>
+
+                                </div>
+                            </div>
+
+                            <!-- 5th Prize -->
+                            <div class="result-card">
+                                <div class="result-card-header">5th Prize</div>
+                                <div class="result-card-content">
+                                    <div class="result-prize-amount">₹100/-</div>
+                                    <div class="result-winning-number">001</div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
 
                 <!-- Load More Button -->
                 <button
